--- a/src/main/resources/templates/refitCeoEmail.html
+++ b/src/main/resources/templates/refitCeoEmail.html
@@ -23,7 +23,7 @@
 
     <!-- 본문 안내 -->
     <p style="margin-top: 20px; font-size: 15px; color: #444; line-height: 1.6;">
-        고객님께서 요청하신 <strong>경비 처리 완료 내역</strong>을 CSV 파일로 정리하여 보내드립니다.<br/>
+        고객님께서 요청하신 이번 달 <strong>경비 처리 완료 내역</strong>을 CSV 파일로 정리하여 보내드립니다.<br/>
         본 이메일에 첨부된 파일을 열어, 상세한 경비 처리 내역을 확인하실 수 있습니다.
     </p>
 
